# PixelForge

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  EULA.txt  INSTALL.md  README.md  SECURITY.md  build.sh  deleted_images.md  deleted_images.txt  generate_icons.py  rebrand.py  repopulate_assets.py  test_rebrand.txt
.github/workflows/: build-and-release.yml
data/: QuickReference.md  convmatr.def  gui.xml  pref.xml
data/fonts/: fonts.xml
data/strings/: README.md  en.ini
data/widgets/: about.xml  advanced_mode.xml  ask_for_color_profile.xml  brush_slot_params.xml  canvas_size.xml  cel_properties.xml  color_curve_point.xml  color_mode.xml  convolution_matrix.xml  css_options.xml  debugger.xml  despeckle.xml  duplicate_sprite.xml  dynamics.xml  enter_license.xml  export_file.xml  export_sprite_sheet.xml  file_selector.xml  font_popup.xml  font_style.xml  frame_properties.xml  gif_options.xml  goto_frame.xml  grid_settings.xml  home_view.xml  import_sprite_sheet.xml  incompat_file.xml  jpeg_options.xml  keyboard_shortcuts.xml  (+32 more)
docs/: CODING_STYLE.md  LICENSES.md  ase-file-specs.md  gpl-palette-extension.md
laf @ ca41d2b/: .gitmodules  CONTRIBUTING.md  README.md
src/: CMakeLists.txt  README.md  config.h
src/desktop/linux/: CMakeLists.txt  pixelforge-thumbnailer  pixelforge.desktop
src/desktop/linux/gnome/: pixelforge.thumbnailer
src/desktop/linux/kde/: CMakeLists.txt  pixelforge_thumb_creator.cpp  pixelforge_thumb_creator.h  pixelforgethumbnail.desktop
src/desktop/linux/mime/: pixelforge.xml
tests/: README.md  run-tests.sh
(+1615 files in other folders)
